--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,49 +13,24 @@
   <button mat-flat-button color="primary" [disabled]="!transactions" (click)="download()">Download YNAB CSV</button>
 
   <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Típus </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.type}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="recordDate">
-      <th mat-header-cell *matHeaderCellDef> Könyvelés dátuma </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.recordDate | date : shortDate }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="valueDate">
-      <th mat-header-cell *matHeaderCellDef> Értéknap </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.valueDate | date : shortDate }} </td>
-    </ng-container>
-
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Azonosító </th>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let transaction"> {{transaction.id}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.date | date : shortDate }} </td>
+    </ng-container>
+
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Összeg </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.amount | number}} </td>
+      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.amount | number}} {{transaction.currency}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="payee">
-      <th mat-header-cell *matHeaderCellDef> Partner </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.payee}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="note1">
-      <th mat-header-cell *matHeaderCellDef> Közlemény/1 </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.note1}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="note2">
-      <th mat-header-cell *matHeaderCellDef> Közlemény/2 </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.note2}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="note3">
-      <th mat-header-cell *matHeaderCellDef> Közlemény/3 </th>
-      <td mat-cell *matCellDef="let transaction"> {{transaction.note3}} </td>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.description}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
